# mdp-playground

./: .coveragerc  .gitignore  .gitmodules  .pep8  CONTRIBUTING.md  LICENSE  README.md  README_CONFIGS.md  Wasserstein_sinkhorn_stuff.ipynb  Wasserstein_sinkhorn_stuff.py  __init__.py  cartesian_product_deepmerge.py  codecov.yml  config_readme.md  custom_agents.py  custom_agents_a3c.py  custom_agents_a3c_a3c_params_set_1_lstm.py  custom_agents_a3c_a3c_params_set_2_lstm.py  custom_agents_a3c_cont_nn.py  custom_agents_a3c_lstm.py  custom_agents_a3c_lstm_noises.py  custom_agents_a3c_lstm_params.py  custom_agents_a3c_lstm_sparsity.py  custom_agents_a3c_lstm_sparsity_2.py  custom_agents_a3c_nn.py  custom_agents_a3c_nn_act_lr.py  custom_agents_a3c_nn_act_lr_lstm.py  custom_agents_a3c_nn_lstm.py  custom_agents_a3c_noises.py  custom_agents_a3c_sparsity.py  custom_agents_double_dqn.py  custom_agents_dqn.py  custom_agents_dqn_params_rainbow.py  custom_agents_lr_rainbow.py  custom_agents_nn.py  custom_agents_nn_act_rainbow.py  custom_agents_nn_rainbow.py  custom_agents_noises.py  custom_agents_opt.py  custom_agents_ppo.py  (+59 more)
_autosummary/: mdp_playground.analysis.radar_chart.html  mdp_playground.config_processor.config_processor.combined_processing.html  mdp_playground.config_processor.config_processor.create_gym_env_wrapper_frame_stack_atari.html  mdp_playground.config_processor.config_processor.deepmerge_multiple_dicts.html  mdp_playground.config_processor.config_processor.get_grid_of_configs.html  mdp_playground.config_processor.config_processor.process_configs.html  mdp_playground.config_processor.config_processor.setup_ray_callbacks.html  mdp_playground.config_processor.config_processor.sobol_configs_from_config_dict.html  mdp_playground.envs.gym_env_wrapper.GymEnvWrapper.html  mdp_playground.envs.rl_toy_env.RLToyEnv.html  mdp_playground.envs.rl_toy_env.dist_of_pt_from_line.html  mdp_playground.envs.rl_toy_env.html  mdp_playground.envs.rl_toy_env.transform_discrete_to_multi_discrete.html  mdp_playground.envs.rl_toy_env.transform_multi_discrete_to_discrete.html  mdp_playground.html  mdp_playground.spaces.box_extended.BoxExtended.html  mdp_playground.spaces.box_extended.html  mdp_playground.spaces.discrete_extended.html  mdp_playground.spaces.html  mdp_playground.spaces.image_continuous.ImageContinuous.html  mdp_playground.spaces.image_multi_discrete.html  mdp_playground.spaces.multi_discrete_extended.html  mdp_playground.spaces.tuple_extended.html
_modules/: index.html
analysis/: analysis.py
backups/: cartesian_product_deepmerge.py  cpu_specs.txt  tests_output_commit_3939301edc839c35f98f281404e0d66e3802df9c.txt  tests_output_commit_877081425de960abda4106282864171f23222512.txt  tests_output_commit_fd80d0fcecde4ae5f9e641e542047f9ae39bd071.txt
(+501 files in other folders)
