[tool.poetry]
name = "mdp_playground"
version = "0.0.2"
description = "A python package to design and debug RL agents"
readme = "README.md"
homepage = "https://automl.github.io/mdp-playground"
authors = [
  "Raghu Rajan <rajanr@cs.uni-freiburg.de>",
  "Jessica Borja",
  "Suresh Guttikonda",
  "Fabio Ferreira",
  "Jan Ole von Hartz",
  "André Biedenkapp",
  "Frank Hutter",
  ]
license = "Apache-2.0"
repository = "https://github.com/automl/mdp-playground"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  'Natural Language :: English',
  'Intended Audience :: Developers',
  'Intended Audience :: Education',
  'Intended Audience :: Science/Research',
  'Topic :: Scientific/Engineering :: Artificial Intelligence',
  # 'Topic :: Scientific/Engineering :: Machine Learning',
  # 'Topic :: Scientific/Engineering :: Reinforcement Learning', invalid classifiers on Pypi
  ]
# packages = [{ include = "mdp_playground" },

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/automl/mdp-playground/issues"

[tool.poetry.dependencies]
python = "^3.6"
gym = "0.14.0"

pandas = { version = "0.25.0", optional = true }
requests = { version = "2.22.0", optional = true }
configspace = { version = "0.4.10", optional = true }
scipy = { version = "1.3.0", optional = true }

# TODO: PyPI doees not allow url dependencies
# ray = [
#   { version = "0.7.3", optional = true, extras = ["rllib", "debug"], markers = "extra == 'extras_cont'" },
#   { url = "https://ray-wheels.s3-us-west-2.amazonaws.com/master/8d0c1b5e068853bf748f72b1e60ec99d240932c6/ray-0.9.0.dev0-cp36-cp36m-manylinux1_x86_64.whl", optional = true, markers = "extra == 'extras_disc'"}
#   ]

# TODO: Poetry does not seem to support mutex extras
# tensorflow = [
#   { version = "1.13.0rc1", optional = true, markers = "extra == 'extras_cont'" },
#   { version = "2.2.0", optional = true, markers = "extra == 'extras_disc'" }
# ]

pillow = { version = "6.1.0", optional = true }
tensorflow-probability = { version = "0.9.0", optional = true }
mujoco-py = { version = "2.0.2.13", optional = true }
dill = "^0.3.3"
colorama = "^0.4.4"

[tool.poetry.extras]
extras_disc = ["pandas", "requests", "configspace", "scipy", "pillow", "pillow"]
extras_cont = ["pandas", "requests", "configspace", "scipy", "tensorflow-probability", "mujoco-py"]

[tool.poetry.dev-dependencies]
pytest = "^5.2"
sphinx = "^3.5.4"
sphinx-book-theme = "^0.1.0"

[tool.poetry.scripts]
run-mdpp-experiments = "mdp_playground.scripts.run_experiments:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
